<?xml version="1.0" encoding="utf-8"?>

<!--
 * Tinc App, an Android binding and user interface for the tinc mesh VPN daemon
 * Copyright (C) 2017-2023 Pacien TRAN-GIRARD
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<resources>
	<string name="app_name" translatable="false">Tinc App</string>
	<string name="app_doc_url_format" translatable="false">https://tincapp.pacien.org/doc.html#%1$s</string>

	<!-- generic strings -->
	<string name="generic_title_error">Error</string>
	<string name="generic_loading">Loading…</string>
	<string name="generic_yes">yes</string>
	<string name="generic_no">no</string>
	<string name="generic_none">none</string>
	<string name="generic_action_close">Close</string>
	<string name="generic_action_cancel">Cancel</string>
	<string name="generic_action_apply">Apply</string>
	<string name="generic_action_open_web_page">Open web page</string>

	<!-- about modal -->
	<string name="about_app_menu_about">About</string>
	<string name="about_app_short_desc">Android binding and user interface for the tinc mesh VPN daemon.</string>
	<string name="about_app_copyright">Copyright © 2017–2021 Pacien TRAN-GIRARD and contributors.</string>
	<string name="about_app_license">Software distributed under the terms of the GNU General Public License v3.</string>
	<string name="about_app_website_url" translatable="false">https://tincapp.pacien.org</string>
	<string name="about_app_version_format">App version %1$s (%2$s build)</string>
	<string name="about_app_running_on_format">Running on Android %1$s %2$s</string>
	<string name="about_app_supported_abis_format">Device ABIs: %1$s</string>
	<string name="about_app_open_project_website">Project website</string>

	<!-- crash modal -->
	<string name="crash_modal_title">App crash</string>
	<string name="crash_modal_message">The app encountered a fatal error.</string>
	<string name="crash_modal_crash_logged">Crash details saved in \"%1$s\".</string>
	<string name="crash_modal_action_send_email">Send e-mail</string>
	<string name="crash_modal_action_send_report">Send report</string>
	<string name="crash_modal_dev_email" translatable="false">pacien.gplayfr@gmail.com</string>

	<!-- key decryption modal -->
	<string name="decrypt_key_modal_title">Unlock private tinc keys</string>
	<string name="decrypt_key_modal_field_passphrase">Passphrase</string>
	<string name="decrypt_key_modal_action_unlock">Unlock</string>
	<string name="decrypt_key_modal_action_cancel" translatable="false">@string/generic_action_cancel</string>

	<!-- error notifications -->
	<string name="notification_error_channel_name">Errors</string>
	<string name="notification_error_action_open_manual">Open manual</string>
	<string name="notification_error_title_unable_to_start_tinc">Could not start tinc</string>
	<string name="notification_error_title_unable_to_start_ftp_server">Could not start FTP server</string>
	<string name="notification_error_message_could_not_read_private_key_format">Could not read private tinc keys:\n%1$s</string>
	<string name="notification_error_message_could_not_read_network_configuration_format">Could not read network interface configuration:\n%1$s</string>
	<string name="notification_error_message_could_not_bind_iface">Could not bind network interface. Is another VPN running?</string>
	<string name="notification_error_message_could_not_configure_iface">Could not apply network interface configuration:\n%1$s</string>
	<string name="notification_error_message_daemon_exited">tinc daemon exited during startup:\n%1$s\nCheck the logs for more details.</string>
	<string name="notification_error_message_passphrase_not_provided">No passphrase provided to unlock the keyring.</string>
	<string name="notification_error_message_no_network_name_provided">No network name provided.</string>
	<string name="notification_error_message_no_configuration_for_network_format">Could not find configuration for \"%1$s\" network.</string>
	<string name="notification_error_message_network_config_not_found_format">Could not find network configuration file at \"%1$s\".</string>
	<string name="notification_error_message_network_config_invalid_format">Invalid network configuration in network.conf:\n%1$s</string>
	<string name="notification_error_message_could_not_decrypt_private_keys_format">Could not decrypt private keys:\n%1$s</string>

	<string name="notification_config_access_channel_name">Configuration access</string>
	<string name="notification_config_access_server_running_title">Configuration access server active</string>
	<string name="notification_config_access_server_running_message">The configuration directory is accessible through FTP.</string>

	<!-- Start activity -->
	<string name="start_activity_menu_configure">Configure</string>
	<string name="start_network_list_warning_text">Traffic from this device will be partially or fully routed to and through the selected network in accordance with your configuration. Never connect to a tinc network which you do not trust.</string>
	<string name="start_network_list_title">Connect to network</string>
	<string name="start_network_list_empty_none_found">Could not find any network configuration.</string>
	<string name="start_starting_vpn">Starting VPN…</string>

	<!-- Configure activity -->
	<string name="configure_tools_message_invalid_network_name">Invalid network name.</string>
	<string name="configure_tools_message_network_configuration_written">Network configuration written.</string>

	<string name="configure_activity_title_configuration_access">Configuration access</string>
	<string name="configure_configuration_server_ftp_access">FTP access</string>
	<string name="configure_configuration_server_ftp_access_endpoint_format">User: %1$s, password: %2$s, port: %3$d</string>
	<string name="configure_configuration_server_ftp_access_not_active">Not active</string>

	<string name="configure_activity_title_internal_paths_info">Internal paths info</string>
	<string name="configure_path_info_title_configuration_directory">Configuration directory</string>
	<string name="configure_path_info_title_log_directory">Log directory</string>
	<string name="configure_path_info_title_tinc_binary">tinc binary</string>

	<string name="configure_activity_title_tools">Tools</string>
	<string name="configure_tools_action_generate_node_configuration_and_keys">Generate node configuration and keys</string>
	<string name="configure_tools_action_join_network_via_invitation_url">Join network via invitation URL</string>
	<string name="configure_tools_action_encrypt_decrypt_private_keys">Encrypt or decrypt private keys</string>

	<string name="configure_tools_generate_config_title">New network</string>
	<string name="configure_tools_generate_config_net_name_hint">tinc network name</string>
	<string name="configure_tools_generate_config_node_name_hint">Name of this node</string>
	<string name="configure_tools_generate_config_optional_passphrase_hint">Passphrase (optional)</string>
	<string name="configure_tools_generate_config_action">Create</string>
	<string name="configure_tools_generate_config_generating">Generating node configuration…</string>

	<string name="configure_tools_join_network_title">Join network</string>
	<string name="configure_tools_join_network_field_invitation_url_hint">Invitation URL</string>
	<string name="configure_tools_join_network_action_scan_qr_code_action">Scan QR code</string>
	<string name="configure_tools_join_network_action">Join</string>
	<string name="configure_tools_join_network_joining">Joining network…</string>

	<string name="configure_tools_private_keys_encryption_title">Private keys encryption</string>
	<string name="configure_tools_private_key_encryption_current_passphrase">Current passphrase\n(leave empty if none)</string>
	<string name="configure_tools_private_key_encryption_new_passphrase">New passphrase\n(leave empty to decrypt)</string>
	<string name="configure_tools_private_keys_encryption_action" translatable="false">@string/generic_action_apply</string>
	<string name="configure_tools_private_keys_encryption_encrypting">Encrypting/decrypting private tinc keys</string>

	<!-- Status activity -->
	<string name="status_activity_state_connected_to_format">Connected to %s</string>
	<string name="status_activity_menu_disconnect">Disconnect</string>
	<string name="status_activity_menu_show_log">Show log</string>
	<string name="status_activity_disconnecting_vpn">Disconnecting VPN…</string>

	<string name="status_activity_title_network_info">Network</string>
	<string name="status_network_info_network_name_label">Network name</string>
	<string name="status_network_info_ip_addresses_label">IP addresses</string>
	<string name="status_network_info_routes_label">Routes</string>
	<string name="status_network_info_dns_servers_label">DNS servers</string>
	<string name="status_network_info_search_domains_label">Search domains</string>
	<string name="status_network_info_allowed_applications_label">Allowed apps</string>
	<string name="status_network_info_disallowed_applications_label">Disallowed apps</string>
	<string name="status_network_info_allow_bypass_label">Allow bypass</string>
	<string name="status_network_info_value_yes" translatable="false">@string/generic_yes</string>
	<string name="status_network_info_value_no" translatable="false">@string/generic_no</string>
	<string name="status_network_info_value_none" translatable="false">@string/generic_none</string>

	<string name="status_activity_title_node_list">Nodes</string>
	<string name="status_node_list_empty_placeholder_text" translatable="false">@string/generic_loading</string>
	<string name="status_node_reachability_unreachable">unreachable</string>
	<string name="status_node_reachability_this_node">this node</string>
	<string name="status_node_reachability_direct_connection">direct</string>
	<string name="status_node_reachability_via_format">via %s</string>
	<string name="status_node_reachability_unknown">…</string>
	<string name="status_node_info_modal_placeholder_text" translatable="false">@string/generic_loading</string>
	<string name="status_node_info_dialog_title">Node info</string>
	<string name="status_node_info_dialog_close_action" translatable="false">@string/generic_action_close</string>

	<string name="status_activity_title_subnet_list">Subnets</string>
	<string name="status_subnet_list_empty_placeholder_text" translatable="false">@string/generic_loading</string>

	<!-- Log viewer activity -->
	<string name="log_view_state_level_format">Log level: %s</string>
	<string name="log_view_state_paused">Logging paused</string>
	<string name="log_view_menu_toggle_logging">Toggle logging</string>
	<string name="log_view_menu_share_log">Share log</string>
</resources>
