<?xml version="1.0" encoding="utf-8"?>

<!--
 * Tinc App, an Android binding and user interface for the tinc mesh VPN daemon
 * Copyright (C) 2017-2020 Pacien TRAN-GIRARD
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="scanAction"
            type="kotlin.jvm.functions.Function0&lt;kotlin.Unit>" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dialog_horizontal_margin"
        android:paddingTop="@dimen/dialog_vertical_margin"
        android:paddingRight="@dimen/dialog_horizontal_margin"
        android:paddingBottom="@dimen/dialog_vertical_margin">

        <EditText
            android:id="@+id/net_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/configure_tools_generate_config_net_name_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/invitation_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/configure_tools_join_network_field_invitation_url_hint"
                android:importantForAutofill="no"
                android:inputType="textUri" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/configure_tools_join_network_action_scan_qr_code_action"
                android:onClick="@{() -> scanAction.invoke()}"
                android:src="@drawable/ic_photo_camera_primary_24dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/join_passphrase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/configure_tools_generate_config_optional_passphrase_hint"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword" />

    </LinearLayout>

</layout>
