<?xml version="1.0" encoding="utf-8"?>

<!--
 * Tinc App, an Android binding and user interface for the tinc mesh VPN daemon
 * Copyright (C) 2017-2018 Pacien TRAN-GIRARD
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<data>

		<variable
			name="appPaths"
			type="org.pacien.tincapp.context.AppPaths"/>

	</data>

	<LinearLayout style="@style/AppTheme.List">

		<LinearLayout style="@style/AppTheme.ListBlock">

			<TextView
				style="@style/AppTheme.BlockTitle"
				android:text="@string/configure_path_info_title_configuration_directory"/>

			<TextView
				style="@style/AppTheme.BlockContent"
				android:text="@{appPaths.confDir().absolutePath}"
				android:textIsSelectable="true"/>

		</LinearLayout>

		<LinearLayout style="@style/AppTheme.ListBlock">

			<TextView
				style="@style/AppTheme.BlockTitle"
				android:text="@string/configure_path_info_title_log_directory"/>

			<TextView
				style="@style/AppTheme.BlockContent"
				android:text="@{appPaths.logDir().absolutePath}"
				android:textIsSelectable="true"/>

		</LinearLayout>

		<LinearLayout style="@style/AppTheme.ListBlock">

			<TextView
				style="@style/AppTheme.BlockTitle"
				android:text="@string/configure_path_info_title_tinc_binary"/>

			<TextView
				style="@style/AppTheme.BlockContent"
				android:text="@{appPaths.tinc().absolutePath}"
				android:textIsSelectable="true"/>

		</LinearLayout>

	</LinearLayout>

</layout>
