<?xml version="1.0" encoding="utf-8"?>

<!--
 * Tinc App, an Android binding and user interface for the tinc mesh VPN daemon
 * Copyright (C) 2017-2018 Pacien TRAN-GIRARD
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<data>

		<variable
			name="generateConfigAction"
			type="kotlin.jvm.functions.Function0&lt;kotlin.Unit>"/> <!-- '<' escaping: https://stackoverflow.com/q/40970686 -->

		<variable
			name="joinNetworkAction"
			type="kotlin.jvm.functions.Function0&lt;kotlin.Unit>"/>

		<variable
			name="encryptDecryptPrivateKeysAction"
			type="kotlin.jvm.functions.Function0&lt;kotlin.Unit>"/>

	</data>

	<LinearLayout style="@style/AppTheme.List">

		<LinearLayout
			style="@style/AppTheme.ListBlock.Clickable"
			android:onClick="@{() -> generateConfigAction.invoke()}">

			<TextView
				style="@style/AppTheme.BlockTitle"
				android:text="@string/configure_tools_action_generate_node_configuration_and_keys"/>

		</LinearLayout>

		<LinearLayout
			style="@style/AppTheme.ListBlock.Clickable"
			android:onClick="@{() -> joinNetworkAction.invoke()}">

			<TextView
				style="@style/AppTheme.BlockTitle"
				android:text="@string/configure_tools_action_join_network_via_invitation_url"/>

		</LinearLayout>

		<LinearLayout
			style="@style/AppTheme.ListBlock.Clickable"
			android:onClick="@{() -> encryptDecryptPrivateKeysAction.invoke()}">

			<TextView
				style="@style/AppTheme.BlockTitle"
				android:text="@string/configure_tools_action_encrypt_decrypt_private_keys"/>

		</LinearLayout>

	</LinearLayout>

</layout>
